--- a/Parcial_Final/src/main/resources/org/example/parcial_final/reportes-view.fxml
+++ b/Parcial_Final/src/main/resources/org/example/parcial_final/reportes-view.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/21" fx:controller="org.example.parcial_final.ReportesViewController">
+<BorderPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.parcial_final.ReportesViewController">
     <top>
         <HBox alignment="TOP_RIGHT" BorderPane.alignment="TOP_RIGHT">
             <Button fx:id="btnRegresar" mnemonicParsing="false" prefHeight="35" prefWidth="100" text="Regresar">
@@ -18,7 +18,7 @@
                     <Font size="13.0" />
                 </font>
                 <HBox.margin>
-                    <Insets right="62.0" top="54.0" />
+                    <Insets right="20.0" top="15.0" />
                 </HBox.margin>
             </Button>
         </HBox>
